<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Logger" Id="{047a20cc-a785-4614-8465-ede098785b35}">
    <Declaration><![CDATA[{attribute 'qualified only'}
//Global variables for logging to syslog
VAR_GLOBAL CONSTANT
    (*
    Using the IP address directly avoids DNS configuration issues.
    While we may want to address this in the future, for now the static IP
    will suffice:

    $ nslookup ctl-logsrv01
    Name:   ctl-logsrv01.pcdsn
    Address: 172.21.32.36
    *)
    {attribute 'pytmc' := '
        pv: @(PREFIX)LCLSGeneral:LogHost
        io: io
        field: DESC The log host IP address
    '}
    csLogHost		:	STRING(15)	:= '172.21.32.36';

    {attribute 'pytmc' := '
        pv: @(PREFIX)LCLSGeneral:LogPort
        io: io
        field: DESC The log host UDP port
    '}
    cnLogPort		:	UINT		:= 54321;

    csIpTidbit : STRING(6) := '172.21';

    // Log message circuit breaker configuration

    // Initialization constants for circuit breakers
    ctLocalTripThreshold : TIME := T#1MS; // Minimum time between log messages
    cnMinTimeViolationAcceptable : INT := 5; // Trip if `nLocalTripThreshold` exceeded `nMinTimeViolationAcceptable` times
    ctLocalTrickleTripThreshold : TIME := T#100MS; // Default trickle trip, activated by global threshold
    ctTrickleTripTime : TIME := T#10S; // Default time for log-handler to recognize a trickle overload condition, many log-message FB occasionally creating a message
    // such that every PLC cycle is emitting a message (this is considered to be too much).
    ctTripResetPeriod : TIME := T#10M; // Default time for CB auto-reset
END_VAR

VAR_GLOBAL
    sPlcHostname	:	STRING		:= 'unknown';

    (* Ref: https://infosys.beckhoff.com/english.php?content=../content/1033/tcpipserver/html/TcPlcLibTcpIp_FB_SocketUdpSendTo.htm
        TODO: Activate the "Replace constants" option in the
        TwinCAT PLC Control->"Project->Options...->Build" dialog window.
    *)
    {attribute 'analysis' := '-33'}
    nTCPADS_MAXUDP_BUFFSIZE : UDINT :=10000;

    {analysis -33}
    fbRootLogger : FB_LogMessage; //Instantiated here to be used everywhere
    {analysis +33}

    {attribute 'pytmc' := '
        pv: @(PREFIX)LCLSGeneral:GlobalLogTrickleTrip
        io: i
        field: DESC Tripped by overall log count
    '}
    bTrickleTripped :   BOOL; // Global trickle trip flag

    {attribute 'pytmc' := '
        pv: @(PREFIX)LCLSGeneral:LogMessageCount
        io: i
        field: DESC Total log messages on the last cycle
    '}
    nGlobAccEvents : UDINT; // Global log message count
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>